<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/container"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" 
    android:background="@color/negro_fondo">
	
    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dip" >
    
        <ImageButton
            android:id="@+id/imageButton1"
            android:layout_width="100dip"
            android:layout_height="130sp"
            android:layout_weight="1"
            android:onClick="verNotas"
            android:scaleType="fitXY"
            android:src="@drawable/notas" />
        
         <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="100dip"
            android:layout_height="130sp"
            android:layout_weight="1"
            android:onClick="verPromedio"
            android:scaleType="fitXY"
            android:src="@drawable/promedio" />
    </TableRow>
    
    <TableRow>
        <TextView
            android:id="@+id/textView1"
            android:layout_marginBottom="10sp"
            android:layout_marginLeft="55sp"
            android:layout_marginTop="10sp"
            android:layout_weight="1"
            android:textColor="@color/blanco_letra"
            android:text="@string/notas"
            android:textSize="20.0sp" />    
   
        <TextView
            android:id="@+id/textView2"
            android:layout_marginBottom="10sp"
            android:layout_marginLeft="45dp"
            android:layout_marginRight="20sp"
            android:layout_marginTop="10sp"
            android:layout_weight="1"
            android:textColor="@color/blanco_letra"
            android:text="@string/promedio"
            android:textSize="20sp" />
    </TableRow>
    
    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10.0sp"
        android:layout_marginLeft="8dip"
        android:layout_marginRight="8dip"
        android:textColor="@color/blanco_letra"        
        android:text="@string/ingrese_la_sgte_info"
        android:textSize="20.5sp" />
    
    <TableRow>
        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp"
            android:layout_marginLeft="8dip"
            android:layout_weight="2"
            android:textColor="@color/blanco_letra"
            android:text="Promedio Acumalado"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/campo_promedio_acumulado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="15sp"
            android:layout_marginRight="8dip"
            android:ems="10"            
            android:cursorVisible="true"
            android:inputType="numberDecimal" >
            <requestFocus />
        </EditText>
    </TableRow>
    
    <TableRow>
        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp"
            android:layout_marginLeft="8dip"
            android:layout_weight="2"
            android:textColor="@color/blanco_letra"
            android:text="Creditos Cursados"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/campo_creditos_cursados"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="15sp"
            android:layout_marginRight="8dip"
            android:ems="10"
            
            android:inputType="number" />
    </TableRow>
    
    <TableRow>

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20sp"
            android:layout_marginLeft="8dip"
            android:layout_marginRight="8dip"
            android:layout_weight="2"
            android:textColor="@color/blanco_letra"
            android:text="Semestre"
            android:textSize="20sp" />
        
        <EditText
            android:id="@+id/campo_semestre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20sp"
            android:layout_marginRight="8dip"
            android:layout_weight="1.0"
            android:ems="10"
            android:inputType="number" />
                  
    </TableRow>
    
    
    <Button
        android:id="@+id/boton_ingresar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="8dip"
        android:layout_marginLeft="8dip"
        android:onClick="ingresar"
        android:background="@color/azul_boton"
        android:textColor="@color/blanco_letra"
        android:text="Ingresar" />    

</TableLayout>
